--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ outline: 1px solid blue;
 /*fin menú íconos*/
 /*Compus*/
 .compus{
-background-color: #E6E6E6;
+background-color: #FAFAFA;
 background-size: 100% auto;
 padding-bottom: 40%;
 text-align: center;
@@ -83,11 +83,12 @@ width: 100%;
 /*fin menú 3*/
 /*Portfolio*/
 .porta-menu{
-	background-color: grey;
+	background-color: #f4f4f4;
+	padding-bottom: 80px;
 }
 .porta{
 	text-align: center;
-	padding-top: 20px;
+	padding:20px;
 }
 .porta ul li{
 	list-style: none;
@@ -97,4 +98,81 @@ width: 100%;
 .porta img{
 	padding-top: 10px;
 }
+.porta h4{
+	color:#2D323A;
+	margin-bottom: 0;
+}
+.porta p{
+	color:#888888;
+}
 /*fin del portafolio*/
+/*inicio fondo2*/
+.fondo2{
+background: url("../img/background/city.jpg") no-repeat center center;
+background-size: 100% auto;
+text-align: center;
+padding:130px 100px ;/*no es necesaria que le ponga la unidad*/
+height: 400px;
+color:#FFFFFF;
+}
+/*fin fondo2*/
+
+/* start package*/
+.package{
+	background-color: #f4f4f4;
+}
+/*end package*/
+/*customer*/
+.costumer{
+	text-align: center;
+	margin:50px;
+}
+.costumer img{
+	border-radius: 50%;
+	height: 205px;
+	padding:40px 0 20px 0;
+}
+/*end customer*
+/*contact us*/
+.fondo3{
+	text-align: center;
+	background: url("../img/background/contactus.jpg") no-repeat center;
+	background-size: 100% auto;
+	height: 600px;
+	color: #FAFAFA;
+}
+.fondo3 h2{
+	text-align: left;
+}
+.fondo3 p{
+	text-align: justify;
+}
+.contact{
+	margin:40px;
+}
+.form-control{
+opacity:0.5;
+margin-top: 20px;
+}
+.columna1, .columna2{
+	padding:0 70px 30px 0;
+}
+
+.btn-submit{
+	text-align: center;
+	margin-top: 20px;
+	color: #FFF;
+	background-color: #0DC0c0;
+	border: #0DC0c0;
+	width: 110px;
+	height: 50px;
+	margin-right: 400px;
+}
+.addres{
+	margin-top: 40px;
+}
+.addres span{
+	padding-right: 20px;
+}
+
+/*end contact us*/
